--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     url: jdbc:mysql://39.106.38.77:3306/yaouguoji?useSSL=false
     username: yaouguoji
     password: liuwen
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
 mybatis:
   mapper-locations: classpath:sqlmap/*.xml
