修改项目为war

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.bester.platform</groupId>
     <artifactId>platform-chain</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>platform-chain</name>
     <description>Demo project for Spring Boot</description>
@@ -98,6 +98,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>platform-chain</finalName>
     </build>
 
 
