--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-        <finalName>platform-chain</finalName>
+        <finalName>BlockChain</finalName>
     </build>
 
 
