--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-        <finalName>BlockChain</finalName>
+        <finalName>blockChain</finalName>
     </build>
 
 
