--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,10 @@ spring:
 mybatis:
   mapper-locations: classpath:sqlmap/*.xml
   type-aliases-package: com.bester.platform.platformchain.entity
+
+logging:
+  level:
+    com:
+      bester:
+        platform:
+          platformchain: DEBUG
