--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,8 @@ server:
 spring:
   servlet:
     multipart:
-      max-file-size: 2MB
+      max-file-size: 10MB
+      max-request-size: 10MB
   datasource:
     url: jdbc:mysql://39.106.38.77:3306/yaouguoji?useSSL=false
     username: yaouguoji
