--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,6 @@ spring:
       name: block-chain-web
       registry:
         address: zookeeper://39.106.38.77:2181
+    protocol:
+      name: dubbo
+      port: 20881
