--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>com.xianbester</groupId>
             <artifactId>bester-api</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>0.0.2-RELEASE</version>
         </dependency>
 
         <dependency>
